# Annotate_doc

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.sh
src/annote_pdf/: main.py
src/annote_pdf/core/: annotation_store.py  models.py  pdf_document.py
src/annote_pdf/ui/: bbox_item.py  main_window.py  pdf_view.py
tests/: test_annotation_store.py  test_pdf_document.py
