[project]
name = "annote-pdf"
version = "0.1.0"
description = "Outil d'annotation de PDF par rectangles (bbox)"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
annote-pdf = "annote_pdf.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]